# aic-sdk-cpp

./: CMakeLists.txt  DEVELOPMENT.md  LICENSE.AIC-SDK  README.md  bcryptprimitives_extra.def
.github/workflows/: test.yml
cmake/: aic-sdkConfig.cmake.in
example/: CMakeLists.txt  main.cpp
include/: aic.hpp
release/: ReleaseNotes.md
src/: aic.cpp
test/: CMakeLists.txt  test_processor.cpp
